--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,17 @@
     box-sizing: border-box;
 }
 
+.visually-hidden {
+	position: absolute !important;
+	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+	clip: rect(1px, 1px, 1px, 1px);
+	padding:0 !important;
+	border:0 !important;
+	height: 1px !important; 
+	width: 1px !important; 
+	overflow: hidden;
+}
+
 body {
     font-family: 'Lato', sans-serif;;
     color: #60606e;
@@ -156,7 +167,7 @@ ul, ol {
 
 .ba-work-list {
     padding-top: 40px;
-    padding-bottom: 62px;
+    padding-bottom: 40px;
 }
 
 .ba-work__item + .ba-work__item {
@@ -266,8 +277,7 @@ ul, ol {
         /*BA-FOOTER*/
 
 .ba-footer {
-    /*height: 60vh;*/
-    min-height: 100%;
+    min-height: 55vh;
     position: relative;
 }
 
